load("@rules_python//python:defs.bzl", "py_library")

# BUG: Figure out why I cannot use src/echo.py
py_library(
    name = "echo_lib",
    srcs = ["src/echo.py"],
    # visibility = ["//projects/python-flask:__pkg__"],
    visibility = ["//visibility:public"],
)

py_test(
    name = "echo_test",
    srcs = [
        "tests/echo_test.py",
    ],
    deps = [
        "//libs/echo:echo_lib",
    ],
)
