load("@pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library", "py_binary")
load("//tools/pytest:defs.bzl", "pytest_test")

py_library(
    name = "webapp",
    srcs = ["main.py"],
    # srcs_version = "PY3",
    deps = [requirement("fastapi")],
)

# to add additionals parameters place them after "--" in bazel call, like:
# `bazel run //webapp:run -- --reload`
py_binary(
    name = "run",
    srcs = ["run.py"],
    # python_version = "PY3",
    # srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        requirement("uvicorn"),
        ":webapp",
    ],
)

pytest_test(
    name = "test",
    srcs = glob(["*.py"]),
    deps = [
        requirement("requests"),
        requirement("fastapi"),
        ":webapp",
        ":run",
    ],
)
