load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "calculator_lib",
    srcs = ["models/calculator.py"],
    # visibility = ["//projects/python-flask:__pkg__"],
    visibility = ["//visibility:public"],
)

py_test(
    name = "calculator_test",
    timeout = "short",
    srcs = ["tests/calculator_test.py"],
    deps = [
        "//libs/py/calculator:calculator_lib",
    ],
)
