# See https://bazel.build/concepts/build-files

load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "devops_lib",
    srcs = ["models/devops.py"],
    # visibility = ["//projects/python-flask:__pkg__"],
    visibility = ["//visibility:public"],
)

py_test(
    name = "devops_test",
    srcs = [
        "tests/devops_test.py",
    ],
    timeout = "short",
    deps = [
        "//libs/py/devops:devops_lib",
    ],
)
