# See https://bazel.build/concepts/build-files

load("@rules_python//python:defs.bzl", "py_library")

# BUG: Figure out why I cannot use src/echo.py
py_library(
    name = "echo_lib",
    srcs = ["models/echo.py"],
    # visibility = ["//projects/python-flask:__pkg__"],
    visibility = ["//visibility:public"],
)

py_test(
    name = "echo_test",
    srcs = [
        "tests/echo_test.py",
    ],
    timeout = "short",
    deps = [
        "//libs/py/echo:echo_lib",
    ],
)
